2001-07-19  Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu>

	* configure.in: fix the GNUMERIC_HAVE_ALLOCA_H test to handle the
	new cache value used by autoconf 2.50+.

2001-08-02  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* configure.in: Use the new improved (functional) guile tests.

2001-08-02  Jody Goldberg <jgoldberg@home.com>

	* src/application.c (application_init) : Add search&replace icon from
	  evo.
	* src/workbook-control-gui.c (workbook_standard_toolbar_orient) : Use
	  it.

2001-08-01  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-autofill.c (autofill_compute_delta) : default to copy not
	  increment.

2001-07-31  Jody Goldberg <jgoldberg@home.com>

	* src/application.c (application_init) : add new icons from evolution.
	* src/workbook-control-gui.c (workbook_standard_toolbar_orient) : Use
	  them.

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-pane.c (gnm_pane_rangesel_bound_set) : typo.

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-canvas.c (gnm_canvas_key_mode_sheet) : Use the properly
	  localized formats.

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-canvas.c (gnm_canvas_key_mode_sheet) : Use
	  workbook_cmd_mutate_borders.
	* src/workbook-cmd-format.c (workbook_cmd_mutate_borders) : moved
	  from gnumeric_canvas.

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/item-bar.c (item_bar_resize_stop) : renamed from
	  item_bar_end_resize to be consistent.

	* src/Makefile.am : rename gnumeric-sheet -> gnumeric-canvas

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-control.c (sc_wbc) : new.
	(sc_sheet) : const.
	(sc_update_cursor_pos) : delete.

	* src/gnumeric-pane.c (gnm_pane_special_cursor_bound_set) : new.
	(gnm_pane_special_cursor_start) : ditto.
	(gnm_pane_special_cursor_start) : ditto.

	* src/sheet-control-gui.c (scg_update_cursor_pos)  : fold into
	  scg_resize.
	(scg_resize) : reposition all of the cursors.
	(scg_edit_start) renamed from scg_create_editor.