@@ -1,3 +1,12 @@
+2001-08-03  Jody Goldberg <jgoldberg@home.com>
+
+	* src/colrow.c (colrow_restore_sizes) : Use sheet_flag_recompute_spans.
+	  to simplfy debugging.
+	* src/sheet.c (sheet_set_zoom_factor) : ditto
+	(sheet_{insert,delete}_{cols,rows}) : ditto.
+	(sheet_move_range) : ditto.
+	sheet_{col,row}_set_size_{pts,pixels} : ditto.
+
 2001-07-19  Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu>
 
 	* configure.in: fix the GNUMERIC_HAVE_ALLOCA_H test to handle the
